--- a/.gitignore
+++ b/.gitignore
@@ -4,11 +4,14 @@ bin-debug/
 bin-release/
 
 # Other files and folders
+lib/
+obj/
 .settings/
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+*.as3proj
 
 # =========================
 # Operating System Files
