--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ lib/
 obj/
 .settings/
 src/org/
+src/app/
 
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
